Fix references. Some links just placed inline.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8547 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -10,12 +10,12 @@
   howpublished = "ISO/IEC 19775-1.2:2008; see \url{http://web3d.org/x3d/specifications/}"
 }
 
-@Comment @misc{vrmleng:bumpmapping,
-@Comment   title = "{Bump mapping extensions}",
-@Comment   author = "Michalis Kamburelis",
-@Comment   year = "2008",
-@Comment   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi\_vrml\_extensions.php#section\_ext\_bump\_mapping}"
-@Comment }
+%% misc{vrmleng:bumpmapping,
+%%   title = "{Bump mapping extensions}",
+%%   author = "Michalis Kamburelis",
+%%   year = "2008",
+%%   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi\_vrml\_extensions.php#section\_ext\_bump\_mapping}"
+%% }
 
 @misc{humus:volumetricfog,
   title = "{Volumetric Fogging 2}",
@@ -31,29 +31,17 @@
   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
 }
 
-@Comment @misc{vrmleng:projectivetexturing,
-@Comment   title = "Projective texture mapping",
-@Comment   author = "Michalis Kamburelis",
-@Comment   year = "2010",
-@Comment   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
-@Comment }
-
-@misc{ogre,
-  title = "{OGRE - Open Source 3D Graphics Engine}",
-  author = "{OGRE}",
-  howpublished = "\url{http://www.ogre3d.org/}"
-}
+%% misc{vrmleng:projectivetexturing,
+%%   title = "Projective texture mapping",
+%%   author = "Michalis Kamburelis",
+%%   year = "2010",
+%%   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
+%% }
 
 @misc{ogre:shader,
   title = "{OGRE Wiki - RT Shader System}",
   author = "{OGRE}",
   howpublished = "\url{http://www.ogre3d.org/tikiwiki/RT+Shader+System&structure=Development}"
-}
-
-@misc{sh,
-  title = "{Sh: A high-level metaprogramming language for modern GPUs}",
-  author = "{Sh}",
-  howpublished = "\url{http://libsh.org/}"
 }
 
 %% Links to "Metaprogramming GPUs with Sh":
@@ -67,8 +55,20 @@
   year = "2004"
 }
 
-@misc{drupal,
-  title = "{Drupal - Open Source CMS}",
-  author = "{Drupal}",
-  howpublished = "\url{http://drupal.org/}"
-}
+%% misc{glsl,
+%%   title = "{OpenGL Shading Language}",
+%%   author = "{Khronos Group}",
+%%   howpublished = "\url{http://www.opengl.org/documentation/glsl/}"
+%% }
+
+%% misc{cg,
+%%   title = "{Cg - The Language for High-Performance Realtime Graphics}",
+%%   author = "{NVidia}",
+%%   howpublished = "\url{http://developer.nvidia.com/page/cg_main.html}"
+%% }
+
+%% misc{hlsl,
+%%   title = "{HLSL}",
+%%   author = "{Microsoft}",
+%%   howpublished = "\url{http://msdn.microsoft.com/en-us/library/bb509561\%28v=vs.85\%29.aspx}"
+%% }
