--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -24,12 +24,12 @@
   howpublished = "\url{http://www.humus.name/index.php?page=3D&ID=70}; nice overview also on \url{http://www.evl.uic.edu/sjames/cs525/shader.html}"
 }
 
-@misc{vrmleng:texcoordbounds,
-  title = "Tex coord generation dependent on bounding box",
-  author = "Michalis Kamburelis",
-  year = "2010",
-  howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
-}
+%% misc{vrmleng:texcoordbounds,
+%%   title = "Tex coord generation dependent on bounding box",
+%%   author = "Michalis Kamburelis",
+%%   year = "2010",
+%%   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
+%% }
 
 %% misc{vrmleng:projectivetexturing,
 %%   title = "Projective texture mapping",
